--- a/src/plugins/Main/index.scss
+++ b/src/plugins/Main/index.scss
@@ -1,7 +1,13 @@
 @import '@/asset/common.scss';
 
 .Main {
-    padding: 0 1.067rem;    
-    position: relative;
+    position: fixed;
     z-index: 5;
+    width: 100%;
+
+    .ai-list {
+        padding: 0 1.067rem 10%;
+        overflow-y: scroll;
+        height: 90%;
+    }
 }
