--- a/src/plugins/Main/ChatUser/index.scss
+++ b/src/plugins/Main/ChatUser/index.scss
@@ -2,7 +2,7 @@
 
 .ChatUser {
     text-align: right;
-    
+
     .user-say {
         margin-top: .8rem;
         width: auto;
@@ -12,5 +12,7 @@
         color: $white;
         @include borderRadius(0.667rem);
         @include font18;
+        max-width: 70%;
+        text-align: left;
     }
 }
