--- a/src/App.scss
+++ b/src/App.scss
@@ -91,6 +91,6 @@ video {
 
 html {
     font-size: 15px !important;
-    background-color: #000;
+    background-color: #eff2f7;
     height: 100vh;
 }
