--- a/src/asset/input.css
+++ b/src/asset/input.css
@@ -10,3 +10,11 @@
     border-style: initial;
     border-color: initial;
 }
+html,body ,#root{
+    height: 100vh;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+}
