--- a/src/App.scss
+++ b/src/App.scss
@@ -94,3 +94,45 @@ html {
     background-color: #eff2f7;
     height: 100vh;
 }
+
+pre {
+    background-color: rgba(0, 0, 0, 1);
+    border-radius: .5333rem;
+    padding: .5333rem;
+    display: block;
+    overflow: scroll;
+    margin: .4rem 0;
+
+    code {
+        color: #f1ee5f;
+        width: 100%;
+        display: block;
+        overflow: scroll;
+
+        /* 设置滚动条的背景色 */
+        &::-webkit-scrollbar {
+            width: .4rem;
+            height: .4rem;
+            border-radius: .6667rem;
+            display: block;
+            background-color: #f9f9f9;
+            overflow: hidden;
+        }
+
+
+        /* 设置滚动条的颜色 */
+        &::-webkit-scrollbar-thumb {
+            background-color: #9E9E9E;
+            /* 你想要的滚动条颜色 */
+            border-radius: .6667rem;
+            /* 可选：为滚动条添加圆角 */
+        }
+
+        /* 设置滚动条的轨道颜色 */
+        &::-webkit-scrollbar-track {
+            background-color: #e1e1e1;
+            border-radius: .6667rem;
+            /* 可选：滚动条轨道颜色 */
+        }
+    }
+}
