--- a/src/plugins/Scroller/index.scss
+++ b/src/plugins/Scroller/index.scss
@@ -6,8 +6,9 @@
     height: 2rem;
     background: url($cdn + "/59/55273bdc97b45876712357c837b98b8fe159/pic.jpg") no-repeat;
     background-size: 100% auto;
-    right: 1.334rem;
-    bottom: 6.4rem;    
+    bottom: 6.4rem;
+    left: 50%;
+    transform: translate3d(-50%, 0, 0);
     z-index: 6;
     display: none;
 }
